syntax = "proto3";
package Agent;

enum AgentErrno {
    RET_EXEC_SUCESS             = 0;
    RET_EXEC_FAILURE            = 1;
    RET_LOGIN_SUCESS            = 2;
    RET_LOGIN_FAILURE           = 3;
    RET_LOGIN_UNAUTH            = 4;
    RET_PEER_OFFLINE            = 5;
    RET_SEND_TIMEROUT           = 6;
    RET_RECV_TIMEROUT           = 7;
};

enum AgentCommand {
    AGENT_LOGIN_REQUEST        = 0;
    AGENT_LOGIN_RESPONSE       = 1;

    AGENT_LOGOUT_REQUEST       = 2;
    AGENT_LOGOUT_RESPONSE      = 3;

    AGENT_NOPIN_REQUEST        = 4;
    AGENT_NOPIN_REPONSE        = 5;

    AGENT_READ_REQUEST         = 6;
    AGENT_READ_RESPONCE        = 7;

    AGENT_WRITE_REQUEST        = 8;
    AGENT_WRITE_RESPONCE       = 9;
};

enum AgentAppId {
    APP_GUARD    = 0;
    APP_AGENT    = 1;
    APP_MOBILE   = 2;
    APP_DLNA     = 3;
    APP_UPNP     = 4;
    APP_DDNS     = 5;
};

message AgentBhs {
    uint32 version              = 1;        /* high 8 major ver, low 8 bug and func update */
    uint32 magic                = 2;        /* Assic:U:0x55 I:0x49 P:0x50 C:0x43 */

    AgentAppId srcId            = 3;
    AgentAppId dstId            = 4;
    AgentCommand cmd            = 5;
    uint32 sessNo               = 6;
    uint32 dataLen              = 7;
    uint32 restLen              = 8;
    uint32 checkSum             = 9;       /* Message Header checksum */
    uint32 timeout              = 10;      /* Timeout wait for data */
};

message LoginRequest {
    string  name                = 1;
    uint32  hash                = 2;      /* name and pass do hash */
    uint32  chap                = 3;
};

message LoginReponse {
    AgentErrno ret              = 1;
};